--- a/src/css/home.css
+++ b/src/css/home.css
@@ -427,7 +427,7 @@ margin-left: -2rem;
     color: #EEEEEE;
     font-family: var(--sans);
     max-width: 1000px;
-    width: 90%;
+    width: 82%;
     font-size: 25px;
     font-weight: 500;
     text-align: left;
@@ -617,6 +617,7 @@ margin-left: -2rem;
     /* h4 */
     .homeTextCon >h4{
         font-size: 20px;
+
     }
 
 
@@ -684,6 +685,7 @@ margin-left: -2rem;
     /* h4 */
     .homeTextCon >h4{
         font-size: 16px;
+        width: 95%;
     }
 
 
